--- a/AdminLTE.StarterKit/appsettings.json
+++ b/AdminLTE.StarterKit/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AdminLTE.StarterKit-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=AdminLTE.StarterKit;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -11,10 +11,10 @@
   },
   "AllowedHosts": "*",
   "SMTPSettings": {
-    "EmailFrom": "info@aspnet-core-signup-verification-api.com",
-    "SmtpHost": "[ENTER YOUR OWN SMTP OPTIONS OR CREATE FREE TEST ACCOUNT IN ONE CLICK AT https://ethereal.email/]",
-    "SmtpPort": 587,
-    "SmtpUser": "",
+    "EmailFrom": "wagner.xu@meehealth.com",
+    "SmtpHost": "smtp.exmail.qq.com",
+    "SmtpPort": 465,
+    "SmtpUser": "wagner.xu@meehealth.com",
     "SmtpPass": ""
   },
   "ApplicationSettings": {
